--- a/SongScheduler/src/gui/HourSchedulePanel.form
+++ b/SongScheduler/src/gui/HourSchedulePanel.form
@@ -18,7 +18,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="buttonLayeredPanel" min="-2" pref="338" max="-2" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Component id="songList" alignment="1" pref="338" max="32767" attributes="0"/>
+              <Component id="songList" alignment="1" min="-2" pref="338" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -31,7 +31,7 @@
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-                  <Component id="songList" pref="294" max="32767" attributes="0"/>
+                  <Component id="songList" min="-2" pref="294" max="-2" attributes="0"/>
               </Group>
           </Group>
       </Group>
