Can now move between the windows!
git-svn-id: http://svn2.xp-dev.com/svn/highfive-Team5@33 aa33edd8-d469-0410-94bb-77eb1adef642

--- a/SongScheduler/src/gui/SchedulerListWindow.form
+++ b/SongScheduler/src/gui/SchedulerListWindow.form
@@ -48,7 +48,9 @@
                       <Component id="addSongButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="addScheduleButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="197" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="doneButton" min="-2" pref="100" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="scheduleTabPane" pref="565" max="32767" attributes="0"/>
@@ -68,6 +70,7 @@
                   <Component id="deleteButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="addSongButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="addScheduleButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="doneButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="34" max="32767" attributes="0"/>
           </Group>
@@ -96,6 +99,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Add Schedule"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="doneButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Done"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="doneButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
