Created a default renderer for the JTree. This can be edited in the future to handle different icons and visuals for the JTree.
git-svn-id: http://svn2.xp-dev.com/svn/highfive-Team5@38 aa33edd8-d469-0410-94bb-77eb1adef642

--- a/SongScheduler/src/gui/DayScheduleScrollPanel.form
+++ b/SongScheduler/src/gui/DayScheduleScrollPanel.form
@@ -41,6 +41,7 @@
             <Property name="alignmentX" type="float" value="0.0"/>
             <Property name="alignmentY" type="float" value="0.0"/>
             <Property name="rootVisible" type="boolean" value="false"/>
+            <Property name="showsRootHandles" type="boolean" value="true"/>
           </Properties>
         </Component>
       </SubComponents>
