Changed a bunch of stuff I guess.
git-svn-id: http://svn2.xp-dev.com/svn/highfive-Team5@40 aa33edd8-d469-0410-94bb-77eb1adef642

--- a/SongScheduler/src/gui/SchedulerListWindow.form
+++ b/SongScheduler/src/gui/SchedulerListWindow.form
@@ -94,6 +94,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Add Song"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addSongButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="addScheduleButton">
       <Properties>
