--- a/SongScheduler/src/gui/SongBrowserWindow.form
+++ b/SongScheduler/src/gui/SongBrowserWindow.form
@@ -101,6 +101,7 @@
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
               <StringArray count="0"/>
             </Property>
+            <Property name="selectionMode" type="int" value="0"/>
           </Properties>
           <Events>
             <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="songListValueChanged"/>
