--- a/SongScheduler/src/gui/SongBrowserWindow.form
+++ b/SongScheduler/src/gui/SongBrowserWindow.form
@@ -283,6 +283,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Save"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="saveNewPopularityActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
