--- a/SongScheduler/src/gui/SongSchedulerWindow.form
+++ b/SongScheduler/src/gui/SongSchedulerWindow.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.4" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Menu class="javax.swing.JMenuBar" name="MenuBar">
       <SubComponents>
@@ -100,6 +100,9 @@
       <Events>
         <EventHandler event="onCommit" listener="datechooser.events.CommitListener" parameters="datechooser.events.CommitEvent" handler="calendarOnCommit"/>
       </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="Calendar min = Calendar.getInstance();&#xa;min.add( Calendar.DATE, -1 );&#xa;calendar.setMinDate( min );&#xa;Calendar max = (Calendar)min.clone();&#xa;max.add( Calendar.DATE, 7 );&#xa;calendar.setMaxDate( max );"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="makeListButton">
       <Properties>
